2023-07-06T16:24:15Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5477834605 # 965
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-06
* notice: last 14d: unq all: 16 54
* notice: prev accum: outdated-unq outdated-all / unq all: 505 808 / 538 863
* notice: next accum: outdated-unq outdated-all / unq all: 507 811 / 539 865
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +3 +4 -0 -0 / 3 4
* notice: removed / changed dates: [2023-06-22] / [2023-07-06]

2023-07-06T08:23:04Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5473210566 # 964
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-06
* notice: last 14d: unq all: 16 53
* notice: prev accum: outdated-unq outdated-all / unq all: 505 808 / 536 861
* notice: next accum: outdated-unq outdated-all / unq all: 505 808 / 538 863
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -1 -2 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2023-06-22 2023-07-06]

2023-07-06T01:46:35Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5470671413 # 963
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-06
* notice: last 14d: unq all: 17 53
* notice: prev accum: outdated-unq outdated-all / unq all: 502 803 / 533 856
* notice: next accum: outdated-unq outdated-all / unq all: 505 808 / 536 861
* notice: prev exec diff / last date diff / accum: unq all: +3 +5 -0 -0 / +5 +8 -0 -0 / 5 8
* notice: removed / changed dates: [2023-06-21] / [2023-07-05]

2023-07-05T16:24:14Z: