@@ -1,11 +1,11 @@
 {
-  "count": 54,
+  "count": 53,
   "uniques": 16,
   "clones": [
     {
       "timestamp": "2023-06-23T00:00:00Z",
-      "count": 3,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2023-06-24T00:00:00Z",
@@ -71,6 +71,11 @@
       "timestamp": "2023-07-06T00:00:00Z",
       "count": 4,
       "uniques": 3
+    },
+    {
+      "timestamp": "2023-07-07T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
