@@ -1,3 +1,12 @@
+2023-07-07T08:21:51Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5484334732 # 967
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-07
+* notice: last 14d: unq all: 16 53
+* notice: prev accum: outdated-unq outdated-all / unq all: 507 811 / 539 865
+* notice: next accum: outdated-unq outdated-all / unq all: 507 811 / 540 866
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -2 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-06-23 2023-07-07]
+
 2023-07-06T16:24:15Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5477834605 # 965
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-06
